[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "simple-array-sum"
path = "simple-array-sum.rs"
[[bin]]
name = "compare_triplets"
path = "compare_triplets.rs"
[dependencies]
